Made changes to the dropdown menu on cart page

--- a/public/cart.html
+++ b/public/cart.html
@@ -49,7 +49,12 @@
       <div class="checkout-section">
         <div class="checkout-box">
           <p class="text">Your Total Bill</p>
-          <div class="dropdown">
+          <select id="deliveryDropdown">
+            <option value="1">Nairobi CBD</option>
+            <option value="2">Nairobi Zone 1</option>
+            <option value="3">Nairobi Zone 2</option>
+          </select>
+          <!-- <div class="dropdown">
             <input
               type="text"
               class="textBox"
@@ -64,7 +69,7 @@
               <div onclick="show('Nairobi Region 2')">Nairobi Region 2</div>
               <div onclick="show('Outside Nairobi')">Outside Nairobi</div>
             </div>
-          </div>
+          </div> -->
           <h1 class="bill">$00</h1>
           <a href="/checkout" class="checkout-btn">Checkout</a>
         </div>
