Made changes to the checkout heading

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="form">
-      <hi class="heading">checkout</hi>
+      <h1 class="heading">checkout</h1>
       <p class="text">Delivery Address</p>
       <input type="text" id="address" placeholder="address" />
       <input type="text" id="street" placeholder="street" />
