Worked on the success payment page together with fetching the order from frontend to backend

--- a/public/cart.html
+++ b/public/cart.html
@@ -49,16 +49,16 @@
       <div class="checkout-section">
         <div class="checkout-box">
           <p class="text">Your Total Bill</p>
-          
-          <select id="deliveryDropdown">
+
+          <!-- <select id="deliveryDropdown">
             <option value="1">CBD Pickup</option>
             <option value="2">Within CBD</option>
             <option value="3">Nairobi Zone 1</option>
             <option value="4">Nairobi Zone 2</option>
             <option value="5">Nairobi Zone 3</option>
             <option value="6">Outside Nairobi</option>
-          </select>
-    
+          </select> -->
+
           <h1 class="bill">$00</h1>
           <a href="/checkout" class="checkout-btn">Checkout</a>
         </div>
