Brought changes to main branch on local machine

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="form">
-      <hi class="heading">checkout</hi>
+      <h1 class="heading">checkout</h1>
       <p class="text">Delivery Address</p>
       <input type="text" id="address" placeholder="address" />
       <input type="text" id="street" placeholder="street" />
@@ -32,28 +32,22 @@
 
     <div class="cart-section">
       <div class="product-list">
-        <p class="section-heading">Your Cart</p>
+        <p class="section-heading">Your Order</p>
         <div class="cart"></div>
       </div>
       <div class="checkout-section">
         <div class="checkout-box">
           <p class="text">Your Total Bill</p>
-          <div class="dropdown">
-            <input
-              type="text"
-              class="textBox"
-              placeholder="Delivery Options"
-              readonly
-            />
-            <div class="delivery-options">
-              <div onclick="show('Nairobi CBD Dropoff')">
-                Nairobi CBD Dropoff
-              </div>
-              <div onclick="show('Nairobi Region 1')">Nairobi Region 1</div>
-              <div onclick="show('Nairobi Region 2')">Nairobi Region 2</div>
-              <div onclick="show('Outside Nairobi')">Outside Nairobi</div>
-            </div>
-          </div>
+
+          <select id="deliveryDropdown">
+            <option value="1">CBD Pickup</option>
+            <option value="2">Within CBD</option>
+            <option value="3">Nairobi Zone 1</option>
+            <option value="4">Nairobi Zone 2</option>
+            <option value="5">Nairobi Zone 3</option>
+            <option value="6">Outside Nairobi</option>
+          </select>
+
           <h1 class="bill">$00</h1>
           <button class="place-order-btn">Place Order</button>
         </div>
