--- a/public/checkout.html
+++ b/public/checkout.html
@@ -58,6 +58,6 @@
     <script src="js/home.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/token.js"></script>
-    <script src="js/checkout.js"></script>
+    <script type="module" src="js/checkout.js"></script>
   </body>
 </html>
