--- a/public/success.html
+++ b/public/success.html
@@ -20,5 +20,6 @@
 
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
+    <script src="js/success.js"></script>
   </body>
 </html>
