--- a/public/success.html
+++ b/public/success.html
@@ -20,6 +20,7 @@
 
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
-    <script src="js/success.js"></script>
+    <script type="module" src="js/checkout.js"></script>
+    <script type="module" src="js/success.js"></script>
   </body>
 </html>
